# brown-rlab

./: ProjectHome.md
OOS_Isomap/: MDS.m  OOS_Isomap.m  genRippleSwissRoll.m  nearest_neighbors.m
OOS_Isomap/dijkstra/: dijkstra.patch
ROGER/: AUTHORS  Makefile.am  Makefile.in  Notes  README  configure  configure.ac
ROGER/ROGER/: Makefile.am  Makefile.in  ROGER.cc  ROGER.h  ROGER_aux.cc  ROGER_aux.h
ROGER/lib/: ROGER.cc  ROGER_aux.h
ROGER/tests/: Makefile.am
ROGER/utils/: Makefile.am  trainROGER.cc
SOGP/: Makefile.in  README  configure  configure.ac
SOGP/SOGP/: Makefile.am  Makefile.in  SOGP.cc
SOGP/utils/: Makefile.am  trainSOGP.cc
stisomap/: ginput_c2.mat  runme.m
stisomap/isomap/: IsomapII.m  IsomapIIst.m
teaching_autonomous_robotics/textbook/: 11_learning.tex  3_robot_middleware.tex  5_enclosure_escape.tex  7_path_planning.tex  README
topdown_localization/cpp_snippet/: objectposepacket.cpp
topdown_localization/smurv_stadium/: PanelCanvas.java
topdown_localization/tdloc_client/: artkplocalizer.cpp  cmvision.h  cmvisionlocalizer.cpp  cmvisionlocalizer.h  dc1394camera.cpp  dc1394camera.h  objectposepackettest.h  topdownlocalizer.cpp  topdownlocalizer.h  topdownlocc.cpp  udpsocket.cpp
topdown_localization/tdloc_server/: LocalizationServer.java  Pose.java
trunk/: DistMat.m  DistMatWin.m  emds.m  readme_stisomap.txt
trunk/OOS_Isomap/: MDS_Transform_Landmark.m  dijkstra.mexglx  embed_new_data.m  example.m  geo_dist_to_landmarks.m  make_dnn.m
trunk/ROGER/: configure.ac
trunk/SOGP/: Makefile.am  README  configure.ac  svn-commit.tmp
(+43 files in other folders)
