bin_PROGRAMS = print_ROGER trainROGER predictROGER

print_ROGER_SOURCES = print_ROGER.cc
print_ROGER_LDADD = ../lib/libROGER.a

trainROGER_SOURCES = trainROGER.cc
trainROGER_LDADD = ../lib/libROGER.a

predictROGER_SOURCES = predictROGER.cc
predictROGER_LDADD = ../lib/libROGER.a

AM_CPPFLAGS = -Wall -I ../lib
